--- a/app/src/main/assets/www/css/index.css
+++ b/app/src/main/assets/www/css/index.css
@@ -19,31 +19,16 @@
 * {
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
 }
-
 body {
-    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
-    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
-    -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
-    background-color:#E4E4E4;
-    background-image:linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-    background-image:-webkit-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-    background-image:-ms-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-    background-image:-webkit-gradient(
-        linear,
-        left top,
-        left bottom,
-        color-stop(0, #A7A7A7),
-        color-stop(0.51, #E4E4E4)
-    );
-    background-attachment:fixed;
-    font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
-    font-size:12px;
-    height:100%;
-    margin:0px;
-    padding:0px;
-    text-transform:uppercase;
-    width:100%;
+    background-image: url("../img/bg.png");
+    font-family: "customfont";
 }
+@font-face {
+    font-family: "customfont";
+    src: url("../fonts/didactgothic-regular.otf") format("opentype");
+        /* Make sure you defined the correct path, which is related to
+            the location of your file `my_css.css` */
+    }
 
 /* Portrait layout (default) */
 .app {
@@ -76,6 +61,70 @@ h1 {
     overflow:visible;
     padding:0px;
     text-align:center;
+}
+ /* unvisited link */
+a:link {
+    color: white;
+}
+
+/* visited link */
+a:visited {
+    color: white;
+}
+
+/* mouse over link */
+a:hover {
+    color: white;
+}
+
+/* selected link */
+a:active {
+    color: white;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: none;
+}
+
+.btn {
+  background: #6b6b6b;
+  background-image: -webkit-linear-gradient(top, #6b6b6b, #4d4d4d);
+  background-image: -moz-linear-gradient(top, #6b6b6b, #4d4d4d);
+  background-image: -ms-linear-gradient(top, #6b6b6b, #4d4d4d);
+  background-image: -o-linear-gradient(top, #6b6b6b, #4d4d4d);
+  background-image: linear-gradient(to bottom, #6b6b6b, #4d4d4d);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  align: right;
+  padding-right: 20px;
+  border-radius: 28px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 12px;
+  padding: 4px 8px 4px 8px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #000000;
+  background-image: -webkit-linear-gradient(top, #000000, #4d4b4d);
+  background-image: -moz-linear-gradient(top, #000000, #4d4b4d);
+  background-image: -ms-linear-gradient(top, #000000, #4d4b4d);
+  background-image: -o-linear-gradient(top, #000000, #4d4b4d);
+  background-image: linear-gradient(to bottom, #000000, #4d4b4d);
+  text-decoration: none;
 }
 
 .event {
